Adding maximo routes and responses

--- a/ApiMocker2/appsettings.json
+++ b/ApiMocker2/appsettings.json
@@ -1,6 +1,25 @@
 {
   "APIDetail": [
     {
+      "Path": "/MXWODETAIL/",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate",
+      "StatusCode": 200,
+      "ResponseBodyFile": "responses/Maximo-workorders.json"
+    },
+    {
+      "Path": "/MXASSET/",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate",
+      "StatusCode": 200,
+      "ResponseBodyFile": "responses/Maximo-assets.json"
+    },
+    {
+      "Path": "/MXWODETAIL/",
+      "Method": "post",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1",
+      "StatusCode": 200,
+      "ResponseBody": "{\"wonum\":\"\", \"siteid\":\"\", \"orgid\":\"\"}"
+    },
+    {
       "Path": "/Order",
       "QueryString": "?customerNo={0}&date={1}",
       "StatusCode": 200,
