Asset responses pages

--- a/ApiMocker2/appsettings.json
+++ b/ApiMocker2/appsettings.json
@@ -8,9 +8,21 @@
     },
     {
       "Path": "/MXASSET/",
-      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate&oslc.orderBy=-changedate&oslc.pageSize=1",
       "StatusCode": 200,
-      "ResponseBodyFile": "responses/Maximo-assets.json"
+      "ResponseBodyFile": "responses/Maximo-assets-last.json"
+    },
+    {
+      "Path": "/MXASSET/",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate&oslc.orderBy=changedate&oslc.pageSize=20",
+      "StatusCode": 200,
+      "ResponseBodyFile": "responses/Maximo-assets-page-1.json"
+    },
+    {
+      "Path": "/MXASSET/",
+      "QueryString": "?apikey=kqqn9pdubbg4u7j0ivauc1mgbjmhc0n8kfen4i6i&lean=1&oslc.select=wonum,description,status,assetnum,changedate&oslc.orderBy=changedate&oslc.pageSize=20&oslc.where={0}",
+      "StatusCode": 200,
+      "ResponseBodyFile": "responses/Maximo-assets-page-2.json"
     },
     {
       "Path": "/MXWODETAIL/",
